--- a/index.qmd
+++ b/index.qmd
@@ -42,22 +42,29 @@ HPC provides a reliable and efficient means of analysing data of all shapes and 
 
 SIH is limited in the support it can provide for NCI Gadi users. If you are new to HPC and Gadi, we expect you will attend [NCI's Intro to Gadi](https://opus.nci.org.au/spaces/Help/pages/48497461/NCI+Training+and+Educational+Events) courses. Additionally, familiarise yourself with Gadi using the [NCI Gadi user guide](https://opus.nci.org.au/display/Help/Gadi+User+Guide).
 
-Live and self-directed training is also offered by SIH and NCI on HPC and data analysis topics:
+**Live and self-directed training** is also offered by SIH and NCI on HPC and data analysis topics:
 
 * [SIH training calendar](https://www.sydney.edu.au/research/facilities/sydney-informatics-hub/workshops-and-training/training-calendar.html)
 * [NCI training calendar](https://opus.nci.org.au/display/Help/NCI+Training+and+Educational+Events)
-* A pre-recorded information session [summarising the Sydney Scheme and how to access NCI](https://youtu.be/DmfzO-YKeV8) 
-* A pre-recorded information session on [adapting Artemis job scripts to Gadi](https://www.youtube.com/watch?v=ZBOycXymok4)
-* A pre-recorded information session on [data transfer between RDS and Gadi](https://youtu.be/ZBOycXymok4?si=Ln03g69UjCcylF13&t=1856)
-* A pre-recorded information session on [working within the Gadi walltime limit](https://youtu.be/s1G8-TBRyTo)
-* A pre-recorded information session on [KSU estimation and compute resource benchmarking on Gadi](https://youtu.be/4ztdcnfIaP4)
-* A live session on [running parallel jobs on Gadi](https://uni-sydney.zoom.us/j/86462552203) - recording TBA
 
-For additional support, please contact the following people depending on your needs:
+
+**Pre-recorded information sessions:**
+
+- [Summarising the Sydney Scheme and how to access NCI](https://youtu.be/DmfzO-YKeV8) 
+- [Adapting Artemis job scripts to Gadi](https://www.youtube.com/watch?v=ZBOycXymok4)
+- [Data transfer between RDS and Gadi](https://youtu.be/ZBOycXymok4?si=Ln03g69UjCcylF13&t=1856)
+- [Working within the Gadi walltime limit](https://youtu.be/s1G8-TBRyTo)
+- [KSU estimation and compute resource benchmarking on Gadi](https://youtu.be/4ztdcnfIaP4)
+- [Running embarassingly parallel jobs on Gadi](https://youtu.be/wl-oAso0c30) (replaces Artemis job arrays)
+
+**For additional support**, please contact the following people depending on your needs:
 
 | Type of issue | Who | How | Details |
 |:---------|:----|:----|:---------|
-| Service unit allocation for running jobs. Request for g/data storage. | SIH | [Make a request](https://nci.sydney.edu.au/) | [Sydney Documentation](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/3448733944/NCI-Sydney+Scheme) |
-| A technical issue with NCI. An error in your running job. New software installation. | NCI Helpdesk | [Log an NCI ticket](https://nci.org.au/users/nci-helpdesk) | Provide your error, log file, jobid. Versions or links for installs. |
+| Service unit allocation for running jobs | SIH | [Make a request](https://nci.sydney.edu.au/) | [Sydney Documentation](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/3448733944/NCI-Sydney+Scheme) |
+|  Request for increased **g/data** storage | SIH | [Send an email](mailto:nci-sydney.scheme@sydney.edu.au) | [Sydney Documentation](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/3448733944/NCI-Sydney+Scheme) |
+| Request for increased **scratch** space | NCI Helpdesk | [Log an NCI ticket](https://nci.org.au/users/nci-helpdesk) | Provide brief justification for the need including number of files, size of files, data lifecycle |
+| Request for increased **iNode** quota in gdata or scratch | NCI Helpdesk | [Log an NCI ticket](https://nci.org.au/users/nci-helpdesk) | Provide brief justification for the need including number of files, size of files, data lifecycle, efforts to reduce iNode footprint |
+| A technical issue with NCI systems or compute jobs | NCI Helpdesk | [Log an NCI ticket](https://nci.org.au/users/nci-helpdesk) | Provide all relevant information such as your error, log file, jobid |
 | A bug in an [SIH pipeline](https://github.com/Sydney-Informatics-Hub) | SIH | Submit an issue on Github | Provide details e.g. [this issue](https://github.com/Sydney-Informatics-Hub/Germline-StructuralV-nf/issues/65) |
 | General research computing or data analysis advice | SIH| [Log an SIH ticket](https://www.sydney.edu.au/research/facilities/sydney-informatics-hub.html) | Provide relevant context, errors, tool names, scripts |
